# chip-8-em

./: .gitignore  CMakeLists.txt  main.c
src/: main.c  stack.c  stack.h
